DEV-253 [FIX] Ensures the file validation message is not shown cropped when the user configures the Link action.

--- a/css/interface.css
+++ b/css/interface.css
@@ -95,3 +95,7 @@ section,
 .variable-row .info-holder {
   color: #b73750;
 }
+
+.text-success {
+  line-height: 1;
+}
